# inkscape-selection-prototype

./: .gitignore  CMakeLists.txt  README.md
src/: Object.cpp  Object.h  ObjectSet.cpp  ObjectSet.h
test/: CMakeLists.txt  ObjectSetTest.cpp  ObjectTest.cpp
